k8s/api-service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: cpulse-api-nodeport
  namespace: conversion-pulse
spec:
  type: NodePort
  selector:
    app: cpulse-api
  ports:
    - name: http
      port: 80
      targetPort: 3000
      nodePort: 30380
