k8s/grafana-service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: cpulse-grafana-nodeport
  namespace: conversion-pulse
spec:
  type: NodePort
  selector:
    app: cpulse-grafana
  ports:
    - name: http
      port: 3000
      targetPort: 3000
      nodePort: 30381
